[tool.poetry]
name = "kursovaja2"
version = "0.1.0"
description = ""
authors = ["kuzhelga <kuzhelga81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
